<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        android:src="@drawable/download"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pr_caterents"
        android:textColor="@color/teal_700"
        android:textSize="50sp"
        android:textStyle="italic"
        style="@style/TextAppearance.Material3.BodyMedium"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.055" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu"
            android:textSize="29sp"
            android:textColor="@color/purple_500"
            android:textStyle="italic"
            android:layout_marginStart="75dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="18dp"
                android:layout_margin="5dp"
                android:elevation="10dp">
                <ImageView
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_2" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="18dp"
                android:layout_margin="5dp"
                android:elevation="10dp">
                <ImageView
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_3" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="18dp"
                android:layout_margin="5dp"
                android:elevation="10dp">
                <ImageView
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_4" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="18dp"
                android:layout_margin="5dp"
                android:elevation="10dp">
                <ImageView
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_5" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="18dp"
                android:layout_margin="5dp"
                android:elevation="10dp">
                <ImageView
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_6" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="18dp"
                android:layout_margin="5dp"
                android:elevation="10dp">
                <ImageView
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_7" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/backg"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.931">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:onClick="loc">

            <ImageView
                android:id="@+id/location"
                android:layout_width="42dp"

                android:layout_height="19dp"
                android:layout_weight="1"
                android:src="@drawable/img" />

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textStyle="bold"
                android:text="@string/address"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:textStyle="bold"
            android:text="@string/email" />

        <TextView
            android:id="@+id/phoneNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:text="@string/phone_no" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:onClick="site">

            <ImageView
                android:id="@+id/webImg"
                android:layout_width="42dp"
                android:layout_height="19dp"
                android:scaleType="fitCenter"
                android:src="@drawable/img_1" />


            <TextView
                android:id="@+id/web"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/webs"
                android:textColor="@color/purple_700"
                android:textStyle="italic"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>